--- a/_config.yml
+++ b/_config.yml
@@ -24,11 +24,11 @@ author:
   avatar           : "profile.png"
   name             : "Zechen Wu"
   pronouns         : # example: "she/her"  
-  bio              : "Researcher @ Brown CS"
-  location         : "Providence, RI"
-  employer         : "Brown University"
+  bio              : "PhD Student @ Duke CS"
+  location         : "Durham, NC"
+  employer         : "Duke University"
   uri              : # URL
-  email            : "zechen_wu@brown.edu" 
+  email            : "zechen.wu@duke.edu" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
