--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ author:
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?hl=en&authuser=2&user=8qEkD_UAAAAJ"
+  googlescholar    : "https://scholar.google.com/citations?user=8qEkD_UAAAAJ&hl=en&authuser=2"
   impactstory      : # URL
   #orcid            : "http://orcid.org/yourorcidurl"
   #semantic         : # URL
