--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "zechen-wu-38506b188"
+  linkedin         : "zechen-wu"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
